# moexalgo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  PKG-INFO  README.md  futoi.ipynb  pyproject.toml
.github/workflows/: python-publish.yml  python-publish_flow.yml
docs/: auth.rst  conf.py  index.rst  market.rst  ticker.rst
docs/source/: candels.rst  conf.py  index.rst  modules.rst  moexalgo.currency.rst  moexalgo.futures.rst  moexalgo.indices.rst  moexalgo.market.rst  moexalgo.models.common.rst  moexalgo.models.indices.rst  moexalgo.models.rst  moexalgo.models.shares.rst  moexalgo.rst  moexalgo.session.rst  moexalgo.stocks.rst  moexalgo.tickers.rst  moexalgo.utils.rst
how_to/: get_candles_moexalgo.ipynb
moexalgo/: __init__.py  candles.py  currency.py  futures.py  indices.py  market.py  metrics.py  requests.py  session.py  shares.py  stocks.py  tickers.py  trades.py  utils.py
moexalgo/ahdata/: __init__.py  client.py  models.py
moexalgo/beta/: issplus.py  resample.py
moexalgo/beta/ahdata/: __init__.py  client.py  models.py
moexalgo/engines/: currency.py  futures.py  stock.py
moexalgo/features/: algopack.py  common.py  extramarket.py  futoi.py
moexalgo/models/: __init__.py  common.py  indices.py  metrics.py  shares.py
moexalgo/next/: __init__.py  protocols.py
moexalgo/next/engines/: _common.py  currency.py  futures.py  stock.py
moexalgo/tools/: __init__.py  resample.py
samples/: ahdata.ipynb  auth.ipynb  download_algopack_data.ipynb  moexalgo_lib.html  moexalgo_lib.ipynb  quick_start.html  quick_start.ipynb  test.ipynb  token.ipynb
samples/features/: algopack.ipynb  extramarket.ipynb
samples/next/: bonds.ipynb  markets.ipynb  options.ipynb  stocks.ipynb
samples/resamples/: candles.ipynb  supercandles.ipynb
samples/websocket/: lasttrades.py  manysubs.py  websocket.py
tests/: .gitignore  test.ipynb  test_ahdata.py  test_alerts.py  test_currency.py  test_futoi.py  test_futures.py  test_markets.py  test_moexalgo_token.py  test_other_boards.py  test_resample.py  test_stocks.py  test_ticker.py  test_tickers.py  test_trades.py  test_utils.py
tests/next/: test_next_bonds.py
